--- a/package.json
+++ b/package.json
@@ -1,19 +1,35 @@
 {
   "name": "homebridge-dioder",
-  "version": "0.0.1",
-  "description": "",
-  "main": "index.js",
-  "author": "",
+  "displayName": "Homebridge Dioder",
+  "version": "0.1.0",
+  "description": "Homebridge plugin to control Dioder LED strips over pigpio pins",
+  "main": "dist/index.js",
+  "scripts": {
+    "prepare": "rm -rf dist && tsc"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/KittenApps/homebridge-dioder.git"
+  },
+  "bugs": {
+    "url": "https://github.com/KittenApps/homebridge-dioder/issues"
+  },
+  "author": "Silizia <66546362+KittenApps@users.noreply.github.com>",
   "license": "MIT",
   "keywords": [
     "homebridge-plugin"
   ],
   "engines": {
-    "node": ">=14.18.1",
+    "node": "^18.16.0",
     "homebridge": ">=1.3.5"
   },
   "dependencies": {
     "colord": "^2.9.3",
     "pigpio": "^3.3.1"
+  },
+  "devDependencies": {
+    "@types/node": "^18.16.16",
+    "homebridge": "^1.6.1",
+    "typescript": "^5.0.4"
   }
 }
