--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "homebridge-plugin"
   ],
   "engines": {
-    "node": "^18.16.0",
+    "node": "^18.16.0 || ^20.9.0",
     "homebridge": ">=1.3.5"
   },
   "dependencies": {
@@ -28,7 +28,8 @@
     "pigpio": "^3.3.1"
   },
   "devDependencies": {
-    "homebridge": "^1.6.1",
-    "typescript": "^5.1.3"
+    "@types/node": "^20.8.10",
+    "homebridge": "^1.7.0",
+    "typescript": "^5.2.2"
   }
 }
